# hybrid-architecture

./: .gitignore  AGENTS.md  CLAUDE.md  GITHUB_GUIDE.md  PHASE_1_HANDOFF.md  PHASE_2_COLAB_RUNBOOK.md  PHASE_2_HANDOFF.md  PHASE_3_HANDOFF.md  PHASE_4_HANDOFF.md  PHASE_5_HANDOFF.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: lab_notes.md  reading_list.md
docs/blog/: parallelism-emerges.md
docs/concepts/: 01_decoding_basics.md  02_kv_cache.md  03_attention.md  04_metrics.md
docs/results/: 01_metric_correlations.csv  01_metric_correlations.manifest.json  02_emergence_atlas.md  02_emergence_curve.csv  02_emergence_curve.manifest.json  02_signature_analysis.manifest.json  03_probes.md  03_signature_auroc.csv  04_hybrid_decoder.md  04_top_features.csv  05_token_type_breakdown.csv  05_token_type_breakdown.manifest.json  06_domain_shift.csv  06_domain_shift.manifest.json  07_probe_layer_depth.csv  07_probe_layer_depth.manifest.json  08_drafter_rejection.csv  08_drafter_rejection.manifest.json  09_router_coefficients.csv  09_router_coefficients.manifest.json  10_hybrid_decoder_bench.csv  (+1 more)
notebooks/: 00_warmup_decoding.ipynb  01_kv_cache_walkthrough.ipynb  02_attention_extraction.ipynb  03_metric_zoo.ipynb  04_emergence_atlas.ipynb
src/hybrid_arch/: cache.py  (+8 more)
tests/: conftest.py  test_attention.py  test_cache.py  test_checkpoints.py  test_hidden_states.py  test_hybrid.py  test_metrics_attention.py  test_metrics_logits.py  test_metrics_parallel.py  test_metrics_per_head.py  test_probes.py  test_smoke.py  test_spec_decode.py  test_viz.py
(+93 files in other folders)
